# graphviz-os2

./: CMakeLists.txt
cmake/: FindPangoCairo.cmake  config_checks.cmake
cmd/dot/: CMakeLists.txt
cmd/dotty/: dotty.lefty
cmd/edgepaint/: CMakeLists.txt
cmd/gvedit/: CMakeLists.txt  csettings.cpp  main.cpp
cmd/gvmap/: CMakeLists.txt
cmd/gvpr/: CMakeLists.txt
cmd/lefty/: common.c  common.h  g.c
cmd/tools/: CMakeLists.txt  gvpack.cpp
contrib/diffimg/: CMakeLists.txt
contrib/prune/: CMakeLists.txt
lib/cdt/: CMakeLists.txt  cdt.h
lib/cgraph/: CMakeLists.txt  agxbuf.h  cghdr.h  cgraph.h
lib/common/: geomprocs.h  globals.h  input.c  utils.c
lib/gvc/: CMakeLists.txt  gvconfig.c  gvdevice.c  gvplugin.c  gvusershape.c
lib/gvpr/: gvpr.c
lib/neatogen/: overlap.c
lib/pathplan/: CMakeLists.txt
lib/sfdpgen/: spring_electrical.c
lib/sparse/: general.h
lib/vmalloc/: vmhdr.h
lib/xdot/: CMakeLists.txt  xdot.h
plugin/core/: CMakeLists.txt  gvplugin_core.c
plugin/dot_layout/: CMakeLists.txt  gvplugin_dot_layout.c
plugin/gd/: CMakeLists.txt  gvplugin_gd.c
plugin/gs/: CMakeLists.txt
plugin/kitty/: CMakeLists.txt
plugin/neato_layout/: CMakeLists.txt  gvplugin_neato_layout.c
plugin/pango/: CMakeLists.txt  gvplugin_pango.c
plugin/vt/: CMakeLists.txt
plugin/webp/: CMakeLists.txt
